# did-panel-builder

./: .coverage  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/add-documentation/: SKILL.md
.claude/skills/app-control/: SKILL.md
.claude/skills/check-code-quality/: SKILL.md
.claude/skills/check-upstream-updates/: SKILL.md
.claude/skills/cutover-bare-runs/: SKILL.md
.claude/skills/delete-branch/: SKILL.md
.claude/skills/edit-acceptance-scenarios/: SKILL.md
.claude/skills/feat-issue/: SKILL.md
.claude/skills/fix-issue/: SKILL.md
.claude/skills/issue-to-rule/: SKILL.md
.claude/skills/merge-branch/: SKILL.md
.claude/skills/mint-umbrella-epic/: SKILL.md
.claude/skills/mockup/: SKILL.md
.claude/skills/new-brainstorm/: SKILL.md
.claude/skills/new-bug/: SKILL.md
.claude/skills/new-feature/: SKILL.md
.claude/skills/propagation-consolidate/: SKILL.md
.claude/skills/propagation-scan/: SKILL.md
.claude/skills/reconcile-issues/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/run-acceptance/: SKILL.md
documentation/product/: overview.md  usage.md
documentation/project/: conventions.md
src/did_panel_builder/: __init__.py  _types.py
tests/: conftest.py
tests/test_diagnostics/: test_coverage.py  test_pre_post.py  test_variation.py
tests/test_io/: test_export.py
tests/test_panels/: test_multi_event.py  test_stacked.py  test_staggered.py
tests/test_treatment/: test_assigner.py
tests/test_visualization/: test_event_study.py  test_geographic.py  test_panel_viz.py  test_stacked_viz.py  test_style.py
(+30 files in other folders)
