[project]
name = "did-panel-builder"
version = "0.1.0"
description = "Build panel datasets for difference-in-differences estimation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.6", "seaborn>=0.12"]
geo = ["matplotlib>=3.6", "geopandas>=0.12"]
io = ["pyarrow>=10.0"]
all = ["did-panel-builder[viz,geo,io]"]
dev = [
    "did-panel-builder[all]",
    "pytest>=7.0",
    "ruff>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/did_panel_builder"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/did_panel_builder/visualization/*.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
